added updateable fill colors

--- a/src/app/components/map/map-control/map-control.component.html
+++ b/src/app/components/map/map-control/map-control.component.html
@@ -22,7 +22,10 @@
                 {{ selectedFeature.name }}
             </div>
             <div>
-                <input type="color" formControlName="color"/>
+                Line color<input type="color" formControlName="color"/>
+            </div>
+            <div>
+                Fill color<input type="color" formControlName="fillColor"/>
             </div>
             <div>
                 Line weight: <select formControlName="weight">
