--- a/src/app/components/map/map-control/map-control.component.html
+++ b/src/app/components/map/map-control/map-control.component.html
@@ -22,13 +22,10 @@
                 {{ selectedFeature.name }}
             </div>
             <div>
-                Line color<input type="color" formControlName="color"/>
+                Line color <input type="color" formControlName="color"/>
             </div>
             <div>
-                Fill color<input type="color" formControlName="fillColor"/>
-            </div>
-            <div>
-                Line weight: <select formControlName="weight">
+                Line weight <select formControlName="weight">
                     <option value="1">1px</option>
                     <option value="2">2px</option>
                     <option value="3">3px</option>
@@ -42,11 +39,14 @@
                 </select>
             </div>
             <div>
-                Fill opacity: <select formControlName="fillOpacity">
+                Fill color <input type="color" formControlName="fillColor"/>
+            </div>
+            <div>
+                Fill opacity <select formControlName="fillOpacity">
                     <option value="0">no fill</option>
                     <option value=".1">10%</option>
                     <option value=".2">20%</option>
-                    <option value=".3">30$</option>
+                    <option value=".3">30%</option>
                     <option value=".4">40%</option>
                     <option value=".5">50%</option>
                     <option value=".6">60%</option>
