--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
@@ -11,7 +11,7 @@
             <app-about></app-about>
         </ng-container>
         <ng-container *ngIf="activePanel == 'meteorology'">
-            <app-input></app-input>
+            <app-meteorology></app-meteorology>
         </ng-container>
         <ng-container *ngIf="activePanel == 'hydrology'">
             <app-input></app-input>
