--- a/src/app/components/map/map-control/map-control.component.html
+++ b/src/app/components/map/map-control/map-control.component.html
@@ -11,7 +11,7 @@
                 {{ feature.name }}
             </div>
             <div class="button" (click)="issueCommand('editor', feature)">
-                <mat-icon>edit</mat-icon>
+                <mat-icon>settings</mat-icon>
             </div>
         </div>
     </div>
@@ -22,10 +22,10 @@
                 {{ selectedFeature.name }}
             </div>
             <div>
-                Line color <input type="color" formControlName="color"/>
+                Line <input type="color" formControlName="color"/>
             </div>
             <div>
-                Line weight <select formControlName="weight">
+                <mat-icon>line_weight</mat-icon> <select formControlName="weight">
                     <option value="1">1px</option>
                     <option value="2">2px</option>
                     <option value="3">3px</option>
@@ -39,10 +39,10 @@
                 </select>
             </div>
             <div>
-                Fill color <input type="color" formControlName="fillColor"/>
+                Fill <input type="color" formControlName="fillColor"/>
             </div>
             <div>
-                Fill opacity <select formControlName="fillOpacity">
+                <mat-icon>opacity</mat-icon> <select formControlName="fillOpacity">
                     <option value="0">no fill</option>
                     <option value=".1">10%</option>
                     <option value=".2">20%</option>
