--- a/src/app/components/input/meteorology/meteorology.component.html
+++ b/src/app/components/input/meteorology/meteorology.component.html
@@ -4,17 +4,17 @@
             <option [value]='null' selected>Select an endpoint</option>
             <option *ngFor="let endpoint of apiEndpointList">{{ endpoint.endpoint }}</option>
         </select>
-        <div *ngIf="currentEndpoint" >
-            <div>{{ currentEndpoint.request?.summary || 'this endpoint has no summary' }}</div>
-            <form [formGroup]="endpointForm">
-                <div *ngFor="let input of inputs" >
-                    <label for="{{input}}">{{input}}</label>
-                    <input formControlName="{{input}}" type="text">
-                </div>
-            </form>
-        </div>
     </div>
-    <div class="control">
-        <button mat-flat-button (click)="submitForm()">submit form</button>
+    <div *ngIf="currentEndpoint" >
+        <form [formGroup]="endpointForm" id="endpointForm">
+            <div id="summary">{{ currentEndpoint.request?.summary || 'this endpoint has no summary' }}</div>
+            <div *ngFor="let input of inputs" class="form-row">
+                <label for="{{input}}">{{input}}</label>
+                <input formControlName="{{input}}" type="text">
+            </div>
+        </form>
+        <div class="control">
+            <button mat-flat-button (click)="submitForm()">submit form</button>
+        </div>
     </div>
 </div>
