--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -6,4 +6,11 @@
     padding-right: 1rem;
     overflow-y: scroll;
     height: 700px;
+    background-color: lightseagreen;
+    padding-top: 0;
+}
+
+.container > h2 {
+    margin: 0;
+    padding-top: .5rem;
 }
