--- a/src/app/components/input/meteorology/meteorology.component.css
+++ b/src/app/components/input/meteorology/meteorology.component.css
@@ -1,16 +1,25 @@
 .container-col-1 {
-    display: grid;
-    grid-template-rows: auto 1fr;
     height: 100%;
 }
 
+.grid-item {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    margin: 5px;
+    margin-top: 0;
+    padding: .125rem;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
 #form {
-    margin: 1rem;
+    margin: .125rem;
+    margin-top: 0;
     text-align: center;
 }
 
 #endpointForm {
-    margin: 1rem;
+    margin: .125rem;
     margin-top: 0;
     display: grid;
     row-gap: .25rem;
@@ -26,6 +35,7 @@
 }
 
 .control {
+    margin-top: .25rem;
     display: grid;
     place-items: center;
 }
