--- a/src/app/components/map/layer-control/layer-control.component.css
+++ b/src/app/components/map/layer-control/layer-control.component.css
@@ -1,6 +1,7 @@
 #layer-control {
     display: grid;
     grid-template-rows: 1fr auto;
+    margin-bottom: .125rem;
 }
 
 #layer-select {
@@ -15,7 +16,6 @@
     place-items: center;
     height: 30px;
     border-radius: 5px;
-    margin-bottom: .125rem;
     background-color: steelblue;
 }
 
@@ -32,10 +32,21 @@
     display: grid;
     place-items: center;
     row-gap: .25rem;
+    background-color: lightgoldenrodyellow;
+    margin: 0 .25rem .25rem .25rem;
+    padding-top: .25rem;
+    border-radius: 0 0 5px 5px;
 }
 
 #editor-form > .button {
-    width: 100%;
+    width: 80%;
+    height: 1.5rem;
+    margin-bottom: .25rem;
+    background-color: lightsteelblue;
+}
+
+#editor-form > .button:hover {
+    background-color: steelblue;
 }
 
 .editor-row {
