--- a/src/app/components/input/meteorology/meteorology.component.html
+++ b/src/app/components/input/meteorology/meteorology.component.html
@@ -2,24 +2,24 @@
     <div class="grid-item">
         <div id=form [formGroup]="metForm">
             <select>
-                <option>v{{ apiv }}</option>
+                <option>{{ apiVersion }}</option>
             </select>
             <select formControlName="endpointSelect" (change)="updateForm()">
                 <option [value]='null' selected>Select an endpoint</option>
                 <option *ngFor="let endpoint of apiEndpointList">{{ endpoint.endpoint }}</option>
             </select>
         </div>
-        <div *ngIf="currentEndpoint" >
-            <form [formGroup]="endpointForm" id="endpointForm">
-                <div id="summary">{{ currentEndpoint.summary || 'this endpoint has no summary' }}</div>
-                <div *ngFor="let input of formInputs" class="form-row">
-                    <label for="{{input}}">{{input}}</label>
-                    <input formControlName="{{input}}" type="text">
-                </div>
-                <div class="control">
-                    <button mat-flat-button (click)="submitForm()">submit form</button>
-                </div>
-            </form>
-        </div>
+    </div>
+    <div *ngIf="currentEndpoint" class="grid-item">
+        <form [formGroup]="endpointForm" id="endpointForm">
+            <div id="summary">{{ currentEndpoint.summary || 'this endpoint has no summary' }}</div>
+            <div *ngFor="let input of formInputs" class="form-row">
+                <label for="{{input}}">{{input}}</label>
+                <input formControlName="{{input}}" type="text">
+            </div>
+            <div class="control">
+                <button mat-flat-button (click)="submitForm()">submit form</button>
+            </div>
+        </form>
     </div>
 </div>
