--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,7 +1,7 @@
 body {
     display: grid;
     grid-template: auto 1fr auto / auto 1fr auto;
-    background-color: lightgray;
+    background-color: #2f7b9e;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
