--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
@@ -6,7 +6,7 @@
             <button type="button" (click)="accept()">Okay</button>
         </ng-container>
         <ng-container *ngIf="welcome">
-            <app-meteorology></app-meteorology>
+            <app-input></app-input>
         </ng-container>
     </ng-container>
     <ng-container *ngIf="!open">
