--- a/src/app/components/input/input/input.component.css
+++ b/src/app/components/input/input/input.component.css
@@ -5,23 +5,34 @@
 
 .grid-item {
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto auto;
     margin: 5px;
     margin-top: 0;
-    padding: .125rem;
+    padding: .5rem;
     border: 1px solid black;
     border-radius: 5px;
+    background-color: lightgoldenrodyellow;
 }
 
-#form {
-    margin: .125rem;
-    margin-top: 0;
-    text-align: center;
+#coords,
+#source,
+#endpoints {
+    display: grid;
+    place-items: center;
 }
 
-#endpointForm {
-    margin: .125rem;
-    margin-top: 0;
+#coords-form {
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 1rem;
+}
+
+#endpoint-select {
+    display: grid;
+    grid-template-columns: auto 1fr;
+}
+
+#endpoint-form {
     display: grid;
     row-gap: .25rem;
 }
@@ -35,8 +46,13 @@
     grid-template-columns: 1fr 1fr;
 }
 
-.control {
-    margin-top: .25rem;
+.controls {
+    margin-top: .5rem;
     display: grid;
-    place-items: center;
+    column-gap: 1rem;
+    grid-template-columns: 1fr 1fr;
+}
+
+input[type='number'] {
+    width: 20ch;
 }
