--- a/src/app/components/map/layer-control/layer-control.component.css
+++ b/src/app/components/map/layer-control/layer-control.component.css
@@ -34,26 +34,15 @@
     row-gap: .25rem;
     background-color: lightgoldenrodyellow;
     margin: 0 .25rem .25rem .25rem;
-    padding-top: .25rem;
+    padding: .25rem;
     border-radius: 0 0 5px 5px;
-}
-
-#editor-form > .button {
-    height: 1.5rem;
-    padding: 0 .5rem;
-    margin-bottom: .25rem;
-    color: lightgoldenrodyellow;
-    background-color: steelblue;
-}
-
-#editor-form > .button:hover {
-    background-color: lightsteelblue;
 }
 
 .editor-row {
     display: grid;
-    grid-template-columns: auto auto 1fr;
+    grid-template-columns: auto auto auto;
     place-items: center;
+    width: 100%;
 }
 
 .editor-item {
