--- a/src/app/components/map/layer-control/layer-control.component.html
+++ b/src/app/components/map/layer-control/layer-control.component.html
@@ -12,13 +12,13 @@
         <form id="editor-form" *ngIf="feature" [formGroup]="styleForm">
             <div class="editor-row">
                 <div class="editor-item">
-                    <input type="color" formControlName="color"/>
+                    <input type="color" formControlName="color" (change)="issueCommand('update-style')"/>
                 </div>
                 <div class="editor-item">
                     <mat-icon>line_weight</mat-icon> 
                 </div>
                 <div class="editor-item">
-                    <select formControlName="weight">
+                    <select formControlName="weight" (change)="issueCommand('update-style')">
                         <option value="1">1px</option>
                         <option value="2">2px</option>
                         <option value="3">3px</option>
@@ -34,13 +34,13 @@
             </div>
             <div class="editor-row">
                 <div class="editor-item">
-                    <input type="color" formControlName="fillColor"/>
+                    <input type="color" formControlName="fillColor" (change)="issueCommand('update-style')"/>
                 </div>
                 <div class="editor-item">
                     <mat-icon>opacity</mat-icon> 
                 </div>
                 <div class="editor-item">
-                    <select formControlName="fillOpacity">
+                    <select formControlName="fillOpacity" (change)="issueCommand('update-style')">
                         <option value="0">no fill</option>
                         <option value=".1">10%</option>
                         <option value=".2">20%</option>
@@ -54,9 +54,6 @@
                         <option value="1">100%</option>
                     </select>
                 </div>
-            </div>
-            <div class="button" (click)="issueCommand('update-style')">
-                Update Style
             </div>
         </form>
     </div>
