--- a/src/app/components/input/input/input.component.css
+++ b/src/app/components/input/input/input.component.css
@@ -35,23 +35,21 @@
 
 #endpoint-form {
     display: grid;
-    row-gap: .25rem;
+    row-gap: .5rem;
 }
 
-#summary {
-    margin-bottom: .5rem;
+#parameter-form {
+    display: grid;
 }
 
-.form-row {
+.form-row,
+.controls {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
 .controls {
-    margin-top: .5rem;
-    display: grid;
     column-gap: 1rem;
-    grid-template-columns: 1fr 1fr;
 }
 
 .button {
@@ -68,4 +66,8 @@
 .button:hover {
     background: rgba(146, 146, 146, 0.5);
     cursor: pointer;
+}
+
+mat-progress-bar {
+    width: 95%;
 }
