--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -37,16 +37,18 @@
     <div *ngIf="currentEndpoint" class="container-item">
         <form id="endpoint-form" [formGroup]="endpointForm">
             <div id="summary">{{ currentEndpoint.summary || 'this endpoint has no summary' }}</div>
-            <div *ngFor="let input of formInputs" class="form-row">
-                <label for="{{input}}">{{input}}</label>
-                <input formControlName="{{input}}" type="text">
-            </div>
-            <div class="controls">
-                <div class="button" (click)="reset()">Clear form</div>
-                <div> 
-                    <div *ngIf="!waiting" class="button" (click)="submitForm()">submit form</div>
-                    <div *ngIf="waiting" class="button"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
+            <div id="parameter-form">
+                <div *ngFor="let input of formInputs" class="form-row">
+                    <label for="{{input}}">{{input}}</label>
+                    <input formControlName="{{input}}" type="text">
                 </div>
+            </div>
+            <div class="controls" *ngIf="!waiting">
+                <div class="button" (click)="reset()">Clear form</div>
+                <div class="button" (click)="submitForm()">submit form</div>
+            </div>
+            <div *ngIf="waiting" > 
+                <div class="button"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
             </div>
         </form>
     </div>
