--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -37,19 +37,41 @@
     <div *ngIf="currentEndpoint" class="container-item">
         <form id="endpoint-form" [formGroup]="endpointForm">
             <div id="summary">{{ currentEndpoint.summary || 'this endpoint has no summary' }}</div>
-            <div id="parameter-form">
-                <div *ngFor="let input of formInputs" class="form-row">
-                    <label for="{{input}}">{{input}}</label>
-                    <input formControlName="{{input}}" type="text">
+            <div *ngFor="let input of formInputs" class="form-row">
+                <label for="{{input}}">{{input}}</label>
+                <input formControlName="{{input}}" type="text">
+            </div>
+            <div class="controls">
+                <div class="button" (click)="reset()">Clear form</div>
+                <div> 
+                    <div *ngIf="!waiting" class="button" (click)="submitForm()">submit form</div>
+                    <div *ngIf="waiting" class="button"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
                 </div>
             </div>
-            <div class="controls" *ngIf="!waiting">
-                <div class="button" (click)="reset()">Clear form</div>
-                <div class="button" (click)="submitForm()">submit form</div>
-            </div>
-            <div *ngIf="waiting" > 
-                <div class="button"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
-            </div>
         </form>
+    </div>
+    <div *ngIf="dataReceived" class="container-item">
+        <div class="data-output-options">
+            <button (click)="showOutput()" mat-icon-button aria-label="View server output">
+                <mat-icon>preview</mat-icon>
+            </button>
+            <button mat-icon-button aria-label="Explore the data">
+                <mat-icon>table_view</mat-icon>
+            </button>
+            <button mat-icon-button aria-label="Explore the data">
+                <mat-icon>analytics</mat-icon>
+            </button>
+            <button mat-icon-button aria-label="Save the data">
+                <mat-icon>save_alt</mat-icon>
+            </button>
+            <button mat-icon-button aria-label="Share the data">
+                <mat-icon>share</mat-icon>
+            </button>
+        </div>
+    </div>
+    <div *ngIf="exploreOutput" class="container-item">
+        <cdk-virtual-scroll-viewport itemSize="500" class="output-viewport">
+          <div *cdkVirtualFor="let items of items" class="output-item">{{items}}</div>
+        </cdk-virtual-scroll-viewport>
     </div>
 </div>
