--- a/src/app/components/output/table/table.component.html
+++ b/src/app/components/output/table/table.component.html
@@ -1,12 +1,12 @@
 <table>
-    <thead>
-      <tr>           
-        <th *ngFor="let head of items[0] | keys">{{head}}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of items">           
-        <td *ngFor="let list of item | keys">{{item[list]}}</td>
-      </tr>
-    </tbody>
-  </table>
+  <thead>
+    <tr>           
+      <th *ngFor="let name of columnNames">{{ name }}</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let row of columnData">           
+      <td *ngFor="let item of row">{{ item }}</td>
+    </tr>
+  </tbody>
+</table>
