--- a/src/app/components/output/table/table.component.html
+++ b/src/app/components/output/table/table.component.html
@@ -10,3 +10,15 @@
     </tr>
   </tbody>
 </table>
+
+<!-- This is the angular material table to be added. -->
+<!-- <mat-table mat-table [dataSource]="columnData" class="mat-elevation-z8">
+
+  <ng-container *ngFor="let col of columnNames; let colIndex = index" matColumnDef="{{col}}">
+    <mat-cell *matCellDef="let element "> {{element[col]}}
+    </mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="columnNames"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: columnNames;"></mat-row>
+</mat-table> -->
