--- a/src/app/components/output/table/table.component.html
+++ b/src/app/components/output/table/table.component.html
@@ -1,4 +1,4 @@
-<table>
+<!-- <table>
   <thead>
     <tr>           
       <th *ngFor="let name of columnNames">{{ name }}</th>
@@ -9,16 +9,15 @@
       <td *ngFor="let item of row">{{ item }}</td>
     </tr>
   </tbody>
-</table>
+</table> -->
 
 <!-- This is the angular material table to be added. -->
-<!-- <mat-table mat-table [dataSource]="columnData" class="mat-elevation-z8">
-
-  <ng-container *ngFor="let col of columnNames; let colIndex = index" matColumnDef="{{col}}">
-    <mat-cell *matCellDef="let element "> {{element[col]}}
-    </mat-cell>
+<table mat-table [dataSource]="dataSource">
+  <ng-container *ngFor="let col of columnNames" matColumnDef="{{col}}">
+    <th mat-header-cell *matHeaderCellDef><div>{{ col }}</div></th>
+    <td mat-cell *matCellDef="let row">{{ row[col] }}</td>
   </ng-container>
 
-  <mat-header-row *matHeaderRowDef="columnNames"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: columnNames;"></mat-row>
-</mat-table> -->
+  <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnNames;"></tr>
+</table>
