--- a/src/app/components/output/table/table.component.html
+++ b/src/app/components/output/table/table.component.html
@@ -12,12 +12,13 @@
 </table> -->
 
 <!-- This is the angular material table to be added. -->
-<table mat-table [dataSource]="dataSource">
-  <ng-container *ngFor="let col of columnNames" matColumnDef="{{col}}">
-    <th mat-header-cell *matHeaderCellDef><div>{{ col }}</div></th>
-    <td mat-cell *matCellDef="let row">{{ row[col] }}</td>
-  </ng-container>
+  <table mat-table [dataSource]="dataSource">
+    <ng-container *ngFor="let col of columnNames" matColumnDef="{{col}}">
+      <th mat-header-cell *matHeaderCellDef><div>{{ col }}</div></th>
+      <td mat-cell *matCellDef="let row">{{ row[col] }}</td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnNames;"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnNames;"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
